part-5/knative-example/test-ubuntu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu1
  labels:
    app: ubuntu1
spec:
  containers:
  - image: ubuntu 
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
